Added main photo, initial text, first gallery. figured out JS gallery.

--- a/css/light-box.css
+++ b/css/light-box.css
@@ -46,6 +46,9 @@ body.lb-disable-scrolling {
 
 .lightbox a img {
   border: none;
+    background-size: contain !important;
+  size: contain !important;
+  flex-flow: contain;
 }
 
 .lb-outerContainer {
