--- a/css/light-box.css
+++ b/css/light-box.css
@@ -219,3 +219,7 @@ body.lb-disable-scrolling {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
+
+#i {
+  background-size: cover;
+}
