--- a/myStyle.css
+++ b/myStyle.css
@@ -12,7 +12,17 @@
 }
 
 .text {
+  word-spacing: 10px;
+  letter-spacing: 1px;
+  font-size: 200 !important;
+  margin-left: 5%;
+  margin-right: 5% ;
+}
 
+.subtext {
+  margin top: 30px;
+  align-items: left;
+  font-size: 20;
 }
 
 .gallery {
@@ -30,6 +40,19 @@
     filter: brightness(110%);
 }
 
+#i {
+  max-width: 100%;
+  height: auto;
+  left: 0px;
+  right: 0px;
+      width: 100%;
+    height: auto;
+    left: 0px;
+    right: 0px;
+
+}
+
 .text {
 padding: 10px 10px 10px 10px;
+s
 }
