--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -7,7 +7,7 @@ https://templatemo.com/tm-520-highway
 */
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'proxima-nova', sans-serif;
 }
 
 body::-webkit-scrollbar {
