--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-/*document body {
-   width: 100%;
-}*/
-
-#backphoto .photo-overlay .inner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column wrap;
-    height: 100%;
-    width: 100%;
-}
-
-
 .backphoto {
     width: 100%;
     background-repeat: no-repeat;
@@ -19,14 +5,8 @@
     filter: brightness(120%);
 }
 
-i {
-  background-size: contain;
-}
-
 .logowhite {
   display: flex;
-  justify-content: center;
-  align-content: center;
-  height: 50%;
-  background-size: contain;
+  position: top;
+  height: 60%;
 }
