--- a/fonts.css
+++ b/fonts.css
@@ -17,7 +17,6 @@
 }
 
 .textbottom {
-  padding-top: 30px;
   font-weight: 300;
   margin-top: 30px;
   margin-left: 20%;
@@ -26,7 +25,7 @@
   font-size: 15px;
   text-align: left;
   word-spacing: 5px;
-  padding-bottom: 100px;
+  padding-bottom: 80px;
 }
 
 .subtitle {
@@ -41,5 +40,26 @@
   font-size: 15px;
   text-align: left;
   font-weight: 300;
+}
 
+.foottitle {
+  top-margin: 100px;
+  bottom-margin: 200px:;
+  font-size: 20px;
+  margin-left: 20%;
+  font-weight: 700;
+}
+
+.contdetails {
+  padding-left: 00%;
+
+  font-size: 15px;
+  text-align: left;
+  font-weight: 300;
+}
+
+j {
+  font-weight: bold;
+
+li {padding: 20px 0 20px 0;}
 }
