--- a/fonts.css
+++ b/fonts.css
@@ -43,19 +43,17 @@
 }
 
 .foottitle {
-  top-margin: 100px;
-  bottom-margin: 200px:;
-  font-size: 20px;
+  font-size: 22px;
   margin-left: 20%;
   font-weight: 700;
+  text-decoration: underline;
+  bottom-margin: 30px:;
 }
 
 .contdetails {
-  padding-left: 00%;
-
-  font-size: 15px;
+  font-size: 20px;
   text-align: left;
-  font-weight: 300;
+  font-weight: 450;
 }
 
 j {
